--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "canvas": "^2.4.1",
     "concat-cli": "^4.0.0",
     "datauri": "file:../vs-img-uri",
     "html-minifier": "^3.5.10",
@@ -13,6 +14,7 @@
     "image-type": "^4.0.0",
     "mustache": "^2.3.0",
     "node-sass": "^4.11.0",
+    "purify-css": "^1.2.5",
     "rimraf": "^2.6.3",
     "simple-git": "^1.110.0",
     "uglify-js": "^3.5.3"
@@ -21,13 +23,18 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "buildimgs": "echo Create/Update image URIs. && yarn imgdata src/images/ src/scss/",
     "buildjs": "echo Merge and uglify JS files. && uglifyjs src/js/modernizr.js src/js/jquery-2.1.3.js src/js/jquery-ui-1.12.1.js src/js/plugins.js src/js/main.js src/js/error.js --compress --mangle --output dist/error.js",
-    "buildcss": "echo Merge, minify, and compile SCSS files. && node-sass --output-style compressed -o dist/ src/scss",
+    "buildcss": "echo Merge, minify, and compile SCSS files. && node-sass --output-style expanded -o dist/ src/scss",
     "buildhtml": "echo Merge HTML sections, CSS, and JS files into a single file. && concat-cli -f src/pagetop.html dist/error.css src/pagemid.html dist/error.js src/pagebot.html -o dist/error.html",
-    "cleanup": "echo Cleanup intermediate files. && rm dist/error.css && rm dist/error.js",
-    "build": "yarn buildimgs && yarn buildjs && yarn buildcss && yarn buildhtml && echo Build completed.",
-    "imgdata": "node -e 'require(\"./scripts/imgconvert.js\").imageConvert(process.argv[1], process.argv[2], process.argv[3])'"
+    "bundlecss": "node -e 'require(\"./scripts/bundlecss.js\").bundlecss()'",
+    "cleanup": "echo Cleanup intermediate files. && rm dist/error.css && rm dist/error.js && rm build/scss/* && rm build/css/*",
+    "build": "yarn buildimgs && yarn buildjs && yarn bundlecss && yarn buildhtml && yarn cleanup && echo Build completed.",
+    "imgdata": "node -e 'require(\"./scripts/imgconvert.js\").imageConvert(process.argv[1], process.argv[2], process.argv[3])'",
+    "jqueryscss": "node -e 'require(\"./scripts/jqueryScssCreate.js\").jqueryscss()'"
   },
   "us_virtualstyle": {
     "answerToEverything": 42
+  },
+  "dependencies": {
+    "fs-extra": "^7.0.1"
   }
 }
